--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.501371Z",
-     "start_time": "2024-10-01T14:19:30.497597Z"
+     "end_time": "2024-10-15T11:31:50.526764Z",
+     "start_time": "2024-10-15T11:31:50.523565Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.530372Z",
-     "start_time": "2024-10-01T14:19:30.526432Z"
+     "end_time": "2024-10-15T11:31:50.550410Z",
+     "start_time": "2024-10-15T11:31:50.547077Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 74
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.580670Z",
-     "start_time": "2024-10-01T14:19:30.575060Z"
+     "end_time": "2024-10-15T11:31:50.601360Z",
+     "start_time": "2024-10-15T11:31:50.595538Z"
     }
    },
    "cell_type": "code",
@@ -63,9 +63,9 @@
     "current_dir = os.getcwd()\n",
     "#dataset_name = \"kvasir\"\n",
     "#dataset_name = \"NucleiSeg\"\n",
-    "dataset_name = \"URDE\"\n",
+    "#dataset_name = \"URDE\"\n",
     "#dataset_name = \"isaid\"\n",
-    "#dataset_name = \"coco\"\n",
+    "dataset_name = \"coco\"\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "criteria = 'loss_dice'\n",
@@ -75,17 +75,17 @@
     "    model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
     "else:\n",
     "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric', 'fw_iou', 'pacc']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\", \"C8\", \"D4\"]"
+    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 75
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.634634Z",
-     "start_time": "2024-10-01T14:19:30.624469Z"
+     "end_time": "2024-10-15T11:31:50.653432Z",
+     "start_time": "2024-10-15T11:31:50.646234Z"
     }
    },
    "cell_type": "code",
@@ -129,13 +129,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 76
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.680746Z",
-     "start_time": "2024-10-01T14:19:30.676960Z"
+     "end_time": "2024-10-15T11:31:50.701470Z",
+     "start_time": "2024-10-15T11:31:50.696920Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +156,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 77
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.822006Z",
-     "start_time": "2024-10-01T14:19:30.727888Z"
+     "end_time": "2024-10-15T11:31:50.790272Z",
+     "start_time": "2024-10-15T11:31:50.747446Z"
     }
    },
    "cell_type": "code",
@@ -173,7 +173,7 @@
     "    \n",
     "    for fold in folds:\n",
     "        summary_loc = build_path(dataset_name, model_name, fold, root_dir=root_dir)\n",
-    "        num_params = get_all_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params, select_best=True)\n",
+    "        num_params = get_all_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params, select_best=False)\n",
     "        \n",
     "    results = {'num_params': num_params}\n",
     "\n",
@@ -201,41 +201,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/UNet_e2cnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/C8/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/URDE/D4/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 78
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T14:19:30.834010Z",
-     "start_time": "2024-10-01T14:19:30.832298Z"
+     "end_time": "2024-10-15T11:31:50.802256Z",
+     "start_time": "2024-10-15T11:31:50.800379Z"
     }
    },
    "cell_type": "code",
