--- a/src/Benchmarks/preprocessing/PREPROCESSING_isaid_old.ipynb
+++ b/src/Benchmarks/preprocessing/PREPROCESSING_isaid_old.ipynb
@@ -92,15 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "6260ea2d-9605-46f6-8847-51070064323c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T08:58:22.401622835Z",
-     "start_time": "2024-01-31T08:58:21.925489804Z"
+     "end_time": "2024-10-04T11:12:56.683123Z",
+     "start_time": "2024-10-04T11:12:56.234508Z"
     }
    },
-   "outputs": [],
    "source": [
     "import os\n",
     "import zipfile\n",
@@ -115,7 +113,9 @@
     "import numpy as np\n",
     "\n",
     "from helpers import check_dir_consistency, visualize_images, get_all_dims, create_histograms_of_dims"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -165,19 +165,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "91ca421a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T08:58:31.707781708Z",
-     "start_time": "2024-01-31T08:58:31.590314046Z"
+     "end_time": "2024-10-04T11:12:58.747529Z",
+     "start_time": "2024-10-04T11:12:58.743835Z"
     }
    },
-   "outputs": [],
    "source": [
     "seed = 42\n",
     "nb_folds = 5"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -189,15 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "0dab1412-bfca-46b2-bbe4-be85140885b7",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-31T09:01:57.570092677Z",
-     "start_time": "2024-01-31T09:01:56.712285953Z"
-    },
-    "collapsed": false
+     "end_time": "2024-10-04T11:13:00.728801Z",
+     "start_time": "2024-10-04T11:13:00.717188Z"
+    }
    },
+   "source": [
+    "input_dir = '/home/rob/Documents/3_projects/bench/isaid/data' # <--- modify this\n",
+    "output_dir = '/home/rob/Documents/3_projects/bench/isaid/processed' # <--- modify this\n",
+    "\n",
+    "file_names = os.listdir(input_dir)\n",
+    "file_names"
+   ],
    "outputs": [
     {
      "data": {
@@ -210,30 +216,27 @@
        " 'train-20240131T084536Z-001.zip']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "input_dir = '/home/rob/Documents/3_projects/bench/isaid/data' # <--- modify this\n",
-    "output_dir = '/home/rob/Documents/3_projects/bench/isaid/processed' # <--- modify this\n",
-    "\n",
-    "file_names = os.listdir(input_dir)\n",
-    "file_names"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "5243a7fd4bc48d6a",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-31T09:03:07.882612336Z",
-     "start_time": "2024-01-31T09:03:07.316465464Z"
-    },
-    "collapsed": false
+     "end_time": "2024-10-04T11:13:03.257691Z",
+     "start_time": "2024-10-04T11:13:03.252155Z"
+    }
    },
+   "source": [
+    "data_sources = [os.path.join(input_dir, f) for f in file_names]\n",
+    "print(f'Data file location: {data_sources}')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -243,18 +246,23 @@
      ]
     }
    ],
-   "source": [
-    "data_sources = [os.path.join(input_dir, f) for f in file_names]\n",
-    "print(f'Data file location: {data_sources}')"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "33841ef0bf361afa",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-04T11:13:05.570639Z",
+     "start_time": "2024-10-04T11:13:05.565628Z"
+    }
    },
+   "source": [
+    "tmp_data_dir = os.path.join(output_dir, 'tmp_data')\n",
+    "os.makedirs(tmp_data_dir, exist_ok=True)\n",
+    "print(tmp_data_dir)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -264,11 +272,7 @@
      ]
     }
    ],
-   "source": [
-    "tmp_data_dir = os.path.join(output_dir, 'tmp_data')\n",
-    "os.makedirs(tmp_data_dir, exist_ok=True)\n",
-    "print(tmp_data_dir)"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -408,14 +412,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1762346f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T11:13:09.985769Z",
+     "start_time": "2024-10-04T11:13:09.981734Z"
+    }
+   },
    "source": [
     "annotation_file_train = os.path.join(output_dir, 'tmp_data/train-20240131T084536Z-001/train/Annotations/iSAID_train.json')\n",
     "annotation_file_valid = os.path.join(output_dir, 'tmp_data/val-20240131T084706Z-001/val/Annotations/iSAID_val.json')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -512,10 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "e3787968",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T11:13:16.086292Z",
+     "start_time": "2024-10-04T11:13:16.079315Z"
+    }
+   },
    "source": [
     "# Create list of image directories, and list of annotation directories\n",
     "def get_img_and_mask_dir(subdirs: str, tmp_data_dir: str, semantic_masks: bool = True) -> tuple:\n",
@@ -533,71 +545,37 @@
     "            unzip_and_move_masks(tmp_data_dir, semantic_masks, mask_dir, subdir)\n",
     "\n",
     "    return img_dir, mask_dir"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "id": "e1989daa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "moving files: 100%|██████████| 458/458 [00:00<00:00, 27381.71it/s]\n",
-      "moving files: 100%|██████████| 474/474 [00:00<00:00, 27485.00it/s]\n",
-      "moving files: 100%|██████████| 469/469 [00:00<00:00, 31935.46it/s]\n",
-      "moving files: 100%|██████████| 468/468 [00:00<00:00, 30068.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unzipping /home/rob/Documents/3_projects/bench/isaid/processed/tmp_data/val-20240131T084706Z-001/val/Semantic_masks/images.zip into /home/rob/Documents/3_projects/bench/isaid/processed/tmp_data/val_Semantic_masks\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "moving files: 100%|██████████| 458/458 [00:00<00:00, 31474.63it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unzipping /home/rob/Documents/3_projects/bench/isaid/processed/tmp_data/train-20240131T084536Z-001/train/Semantic_masks/images.zip into /home/rob/Documents/3_projects/bench/isaid/processed/tmp_data/train_Semantic_masks\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "moving files: 100%|██████████| 1411/1411 [00:00<00:00, 30001.54it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All images have a matching mask.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-04T11:13:16.722359Z",
+     "start_time": "2024-10-04T11:13:16.538608Z"
     }
-   ],
+   },
    "source": [
     "img_dir, mask_dir = get_img_and_mask_dir(subdirs, tmp_data_dir, semantic_masks=True)\n",
     "img_files, mask_files = check_dir_consistency(img_dir, mask_dir)"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'subdirs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[8], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m img_dir, mask_dir \u001B[38;5;241m=\u001B[39m get_img_and_mask_dir(\u001B[43msubdirs\u001B[49m, tmp_data_dir, semantic_masks\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m      2\u001B[0m img_files, mask_files \u001B[38;5;241m=\u001B[39m check_dir_consistency(img_dir, mask_dir)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'subdirs' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
