new inf notebook

--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.526764Z",
-     "start_time": "2024-10-15T11:31:50.523565Z"
+     "end_time": "2024-10-18T10:01:51.953989Z",
+     "start_time": "2024-10-18T10:01:51.948991Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.550410Z",
-     "start_time": "2024-10-15T11:31:50.547077Z"
+     "end_time": "2024-10-18T10:01:51.981661Z",
+     "start_time": "2024-10-18T10:01:51.978426Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.601360Z",
-     "start_time": "2024-10-15T11:31:50.595538Z"
+     "end_time": "2024-10-18T10:01:52.031534Z",
+     "start_time": "2024-10-18T10:01:52.026709Z"
     }
    },
    "cell_type": "code",
@@ -64,28 +64,28 @@
     "#dataset_name = \"kvasir\"\n",
     "#dataset_name = \"NucleiSeg\"\n",
     "#dataset_name = \"URDE\"\n",
-    "#dataset_name = \"isaid\"\n",
-    "dataset_name = \"coco\"\n",
+    "dataset_name = \"isaid\"\n",
+    "#dataset_name = \"coco\"\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "criteria = 'loss_dice'\n",
     "\n",
     "if dataset_name in [\"kvasir\", \"NucleiSeg\", \"URDE\"]:\n",
     "    perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']\n",
-    "    model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
+    "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]\n",
     "else:\n",
     "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric', 'fw_iou', 'pacc']\n",
     "    model_names = [\"UNet_vanilla\", \"UNet_e2cnn\", \"C8\", \"D4\"]"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.653432Z",
-     "start_time": "2024-10-15T11:31:50.646234Z"
+     "end_time": "2024-10-18T10:01:52.084450Z",
+     "start_time": "2024-10-18T10:01:52.077674Z"
     }
    },
    "cell_type": "code",
@@ -129,13 +129,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.701470Z",
-     "start_time": "2024-10-15T11:31:50.696920Z"
+     "end_time": "2024-10-18T10:01:52.133545Z",
+     "start_time": "2024-10-18T10:01:52.129733Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +156,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.790272Z",
-     "start_time": "2024-10-15T11:31:50.747446Z"
+     "end_time": "2024-10-18T10:01:52.253701Z",
+     "start_time": "2024-10-18T10:01:52.188790Z"
     }
    },
    "cell_type": "code",
@@ -201,31 +201,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/UNet_e2cnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/coco/D4/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/C8/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/C8/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/C8/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/C8/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/C8/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/D4/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/D4/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/D4/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/D4/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/D4/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T11:31:50.802256Z",
-     "start_time": "2024-10-15T11:31:50.800379Z"
+     "end_time": "2024-10-18T10:01:52.260745Z",
+     "start_time": "2024-10-18T10:01:52.258907Z"
     }
    },
    "cell_type": "code",
