--- a/src/Benchmarks/analysis/step_1-ten_pc_perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-ten_pc_perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:25.920290Z",
-     "start_time": "2024-10-30T10:47:25.306825Z"
+     "end_time": "2024-10-30T10:48:01.976440Z",
+     "start_time": "2024-10-30T10:48:01.972581Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:25.938956Z",
-     "start_time": "2024-10-30T10:47:25.935603Z"
+     "end_time": "2024-10-30T10:48:02.020424Z",
+     "start_time": "2024-10-30T10:48:02.017116Z"
     }
    },
    "cell_type": "code",
@@ -45,19 +45,22 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.098016Z",
-     "start_time": "2024-10-30T10:47:26.093684Z"
+     "end_time": "2024-10-30T10:48:02.065226Z",
+     "start_time": "2024-10-30T10:48:02.059967Z"
     }
    },
    "cell_type": "code",
    "source": [
     "root_dir = '/home/rob/Documents/3_projects/bench/_results/ten_percent/large_models'\n",
     "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/ten_percent/large_models'\n",
+    "\n",
+    "#root_dir = '/home/rob/Documents/3_projects/bench/_results/ten_percent/large_models'\n",
+    "#output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/ten_percent/large_models'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
@@ -79,13 +82,13 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.149318Z",
-     "start_time": "2024-10-30T10:47:26.140911Z"
+     "end_time": "2024-10-30T10:48:02.123058Z",
+     "start_time": "2024-10-30T10:48:02.113423Z"
     }
    },
    "cell_type": "code",
@@ -129,13 +132,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.214780Z",
-     "start_time": "2024-10-30T10:47:26.209046Z"
+     "end_time": "2024-10-30T10:48:02.171222Z",
+     "start_time": "2024-10-30T10:48:02.166871Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +159,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.369455Z",
-     "start_time": "2024-10-30T10:47:26.279413Z"
+     "end_time": "2024-10-30T10:48:02.296861Z",
+     "start_time": "2024-10-30T10:48:02.217019Z"
     }
    },
    "cell_type": "code",
@@ -224,13 +227,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T10:47:26.465267Z",
-     "start_time": "2024-10-30T10:47:26.462987Z"
+     "end_time": "2024-10-30T10:48:02.312708Z",
+     "start_time": "2024-10-30T10:48:02.309191Z"
     }
    },
    "cell_type": "code",
