--- a/analysis_inf_results.ipynb
+++ b/analysis_inf_results.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.350332Z",
-     "start_time": "2024-10-23T07:50:30.347114Z"
+     "end_time": "2024-10-29T08:37:38.230258Z",
+     "start_time": "2024-10-29T08:37:37.410640Z"
     }
    },
    "cell_type": "code",
@@ -17,7 +17,7 @@
    ],
    "id": "c506566519757954",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -25,8 +25,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.401015Z",
-     "start_time": "2024-10-23T07:50:30.395028Z"
+     "end_time": "2024-10-29T08:37:38.240403Z",
+     "start_time": "2024-10-29T08:37:38.236702Z"
     }
    },
    "source": [
@@ -38,31 +38,33 @@
     "    return mean, h"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.449980Z",
-     "start_time": "2024-10-23T07:50:30.445571Z"
+     "end_time": "2024-10-29T08:37:38.368085Z",
+     "start_time": "2024-10-29T08:37:38.364498Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "#model_size = 'small'\n",
     "model_size = 'large'\n",
-    "input_path = f'final_inference_results_{model_size}.json'\n",
+    "#input_path = f'final_inference_results_ten_percent_{model_size}.json'\n",
+    "input_path = f'final_inference_results_ten_percent_{model_size}.json'\n",
     "with open(input_path, 'r') as f:\n",
     "    original_results = json.load(f)"
    ],
    "id": "70a4d91e77965bb2",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.521507Z",
-     "start_time": "2024-10-23T07:50:30.495012Z"
+     "end_time": "2024-10-29T08:37:38.454522Z",
+     "start_time": "2024-10-29T08:37:38.419079Z"
     }
    },
    "cell_type": "code",
@@ -93,19 +95,20 @@
     "        aggregated_results[dataset_name][model_name] = metrics_summary\n",
     "\n",
     "# Save the aggregated results to a new JSON file\n",
-    "output_path = 'aggregated_inference_results.json'  # Adjust path if needed\n",
+    "#output_path = f'aggregated_inference_results_ten_percent_{model_size}.json'\n",
+    "output_path = f'aggregated_inference_results{model_size}.json'\n",
     "with open(output_path, 'w') as f:\n",
     "    json.dump(aggregated_results, f, indent=4)"
    ],
    "id": "58b12a790f6263f0",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.553472Z",
-     "start_time": "2024-10-23T07:50:30.548963Z"
+     "end_time": "2024-10-29T08:37:38.466911Z",
+     "start_time": "2024-10-29T08:37:38.461025Z"
     }
    },
    "cell_type": "code",
@@ -124,13 +127,13 @@
    ],
    "id": "da641b6cf18c0976",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.603661Z",
-     "start_time": "2024-10-23T07:50:30.597362Z"
+     "end_time": "2024-10-29T08:37:38.522057Z",
+     "start_time": "2024-10-29T08:37:38.514831Z"
     }
    },
    "cell_type": "code",
@@ -146,26 +149,26 @@
      "output_type": "stream",
      "text": [
       "  Dataset         Model              IoU             Dice   Pixel Accuracy  \\\n",
-      "0   isaid  UNet_vanilla  0.4821 ± 0.0175  0.5373 ± 0.0186  0.9763 ± 0.0027   \n",
-      "1   isaid    UNet_e2cnn  0.4307 ± 0.0160  0.4821 ± 0.0180  0.9747 ± 0.0024   \n",
-      "2   isaid            C8  0.4457 ± 0.0144  0.4980 ± 0.0155  0.9756 ± 0.0026   \n",
-      "3   isaid            D4              NaN              NaN              NaN   \n",
+      "4   isaid    UNet_e2cnn  0.3205 ± 0.0101  0.3599 ± 0.0108  0.9633 ± 0.0032   \n",
+      "5   isaid  UNet_vanilla  0.3624 ± 0.0200  0.4074 ± 0.0227  0.9689 ± 0.0025   \n",
+      "6   isaid            C8  0.3234 ± 0.0098  0.3628 ± 0.0107  0.9652 ± 0.0029   \n",
+      "7   isaid            D4  0.2634 ± 0.0064  0.2963 ± 0.0077  0.9606 ± 0.0031   \n",
       "\n",
       "     Mean Accuracy Frequency Weighted IoU           Recall        Precision  \n",
-      "0  0.5268 ± 0.0165        0.9578 ± 0.0043  0.5268 ± 0.0165  0.5924 ± 0.0200  \n",
-      "1  0.4714 ± 0.0174        0.9550 ± 0.0041  0.4714 ± 0.0174  0.5355 ± 0.0201  \n",
-      "2  0.4876 ± 0.0163        0.9567 ± 0.0043  0.4876 ± 0.0163  0.5516 ± 0.0147  \n",
-      "3              NaN                    NaN              NaN              NaN  \n"
+      "4  0.3493 ± 0.0107        0.9360 ± 0.0052  0.3493 ± 0.0107  0.4162 ± 0.0117  \n",
+      "5  0.3972 ± 0.0204        0.9461 ± 0.0038  0.3972 ± 0.0204  0.4654 ± 0.0280  \n",
+      "6  0.3522 ± 0.0103        0.9391 ± 0.0047  0.3522 ± 0.0103  0.4196 ± 0.0146  \n",
+      "7  0.2871 ± 0.0075        0.9315 ± 0.0050  0.2871 ± 0.0075  0.3455 ± 0.0074  \n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.659923Z",
-     "start_time": "2024-10-23T07:50:30.654117Z"
+     "end_time": "2024-10-29T08:37:38.641106Z",
+     "start_time": "2024-10-29T08:37:38.633770Z"
     }
    },
    "cell_type": "code",
@@ -181,26 +184,26 @@
      "output_type": "stream",
      "text": [
       "  Dataset         Model              IoU             Dice   Pixel Accuracy  \\\n",
-      "4    coco  UNet_vanilla  0.1789 ± 0.0013  0.2276 ± 0.0017  0.6888 ± 0.0019   \n",
-      "5    coco    UNet_e2cnn  0.1822 ± 0.0022  0.2277 ± 0.0027  0.6781 ± 0.0021   \n",
-      "6    coco            C8  0.1829 ± 0.0042  0.2276 ± 0.0052  0.6780 ± 0.0024   \n",
-      "7    coco            D4              NaN              NaN              NaN   \n",
+      "0    coco    UNet_e2cnn  0.1057 ± 0.0020  0.1388 ± 0.0024  0.6040 ± 0.0033   \n",
+      "1    coco  UNet_vanilla  0.1086 ± 0.0026  0.1447 ± 0.0033  0.6094 ± 0.0043   \n",
+      "2    coco            C8  0.1039 ± 0.0012  0.1365 ± 0.0015  0.6029 ± 0.0032   \n",
+      "3    coco            D4  0.0906 ± 0.0016  0.1207 ± 0.0020  0.5872 ± 0.0038   \n",
       "\n",
       "     Mean Accuracy Frequency Weighted IoU           Recall        Precision  \n",
-      "4  0.2380 ± 0.0025        0.5629 ± 0.0056  0.2380 ± 0.0025  0.2834 ± 0.0048  \n",
-      "5  0.2413 ± 0.0023        0.5484 ± 0.0027  0.2413 ± 0.0023  0.2810 ± 0.0041  \n",
-      "6  0.2416 ± 0.0060        0.5479 ± 0.0069  0.2416 ± 0.0060  0.2808 ± 0.0037  \n",
-      "7              NaN                    NaN              NaN              NaN  \n"
+      "0  0.1473 ± 0.0026        0.4722 ± 0.0023  0.1473 ± 0.0026  0.1740 ± 0.0037  \n",
+      "1  0.1518 ± 0.0042        0.4774 ± 0.0046  0.1518 ± 0.0042  0.1838 ± 0.0041  \n",
+      "2  0.1449 ± 0.0013        0.4722 ± 0.0012  0.1449 ± 0.0013  0.1706 ± 0.0024  \n",
+      "3  0.1286 ± 0.0025        0.4558 ± 0.0040  0.1286 ± 0.0025  0.1504 ± 0.0032  \n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T07:50:30.709117Z",
-     "start_time": "2024-10-23T07:50:30.706120Z"
+     "end_time": "2024-10-29T08:37:38.779581Z",
+     "start_time": "2024-10-29T08:37:38.776165Z"
     }
    },
    "cell_type": "code",
